@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1305 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1306 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -419,3 +419,5 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 	dhcpcd(8): Import dhcpcd-5.1.1. [roy 20091002]
 	libm(3): Add f{dim,max,min}{,f,l} from FreeBSD [christos 20091004]
 	man(1): Display manpage when specified with a path [cegger 20091007]
+	hdaudioctl(8): Add tool to manipulate hdaudio(4) devices
+		[sborrill 20091011]
